        =============== rnumber release 1.8.6 (v1_8_6) on SunOS ===============

        =============== rnumber release 1.8.5 (v1_8_5) on SunOS ===============

        =============== rnumber release 1.8.5 (v1_8_5) on SunOS ===============

        =============== rnumber release 1.8.5 (v1_8_5) on Linux ===============

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================

2002-11-04  Todd Dukes  <Todd.Dukes@motorola.com>

	*  moved directories around so that 

	         make distclean
	         ./autogen.sh 
	         make check

	   will work for those that can't be troubled with 
	
	         make distclean
	         ./autogen.sh 
		 make && make check

        ==================== rnumber release 1.8.4 (v1_8_4) ====================

2002-11-04  Todd Dukes  <Todd.Dukes@motorola.com>

	*  now correctly runs bigloo regression if bigloo support is compiled in.

        ==================== rnumber release 1.8.3 (v1_8_3) ====================

        ==================== rnumber release 1.8.3 (v1_8_3) ====================


        ==================== rnumber release 1.8.3 (v1_8_3) ====================

2002-11-01  Brian Kahne  <bkahne@ibmoto.com>

	* Moved includes in Trace.C outside of ifdef so that an optimized
	build would work.

2002-11-01 Brian changed the version but didn't leave a note. I think all that
	was changed was the version number in configure.in
	
2002-10-31  Todd Dukes  <Todd.Dukes@motorola.com>

	*  added missing RNumber features to C++ version.

2002-10-30  Brian Kahne  <bkahne@ibmoto.com>

	* Made the compilation of Bigloo bindings optional.  However, the
	regression test doesn't yet work correctly- it doesn't run the Bigloo
	tests.  I'll let Todd handle that. :)
