@@ -1,3 +1,7 @@
+2002-11-21  Todd Dukes  <Todd.Dukes@motorola.com>
+
+	* added perl bindings
+
         =============== rnumber release 1.8.6 (v1_8_6) on SunOS ===============
 
         =============== rnumber release 1.8.5 (v1_8_5) on SunOS ===============
